<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtTxtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtFirstName"
        app:layout_constraintStart_toStartOf="@+id/edtTxtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtFirstName" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtLastName"
        app:layout_constraintStart_toStartOf="@+id/edtTxtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtLastName" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="casual"
        android:text="@string/register"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtEmail" />

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tVfirst_name"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tVlast_name"
        app:layout_constraintEnd_toEndOf="@+id/txtFirstName"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tVemail"
        app:layout_constraintEnd_toEndOf="@+id/txtLastName"
        app:layout_constraintStart_toStartOf="@+id/txtLastName"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <CheckBox
        android:id="@+id/chkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_registry"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmail">

        <RadioButton
            android:id="@+id/rbUpperCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:checked="false"
            android:text="@string/upper_case" />

        <RadioButton
            android:id="@+id/rbLowerCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/lower_case" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>